--- a/Task3/Task3.csproj
+++ b/Task3/Task3.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IdentityMatrix.cs" />
+    <Compile Include="Matrix.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpperTriangleMatrix.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
