--- a/Task3/Task3.csproj
+++ b/Task3/Task3.csproj
@@ -48,8 +48,8 @@
     <Compile Include="Matrix.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UpperTriangleMatrix.cs" />
-    <Compile Include="UpperTriangleMatrixDeterminant.cs" />
+    <Compile Include="UpperTriangularMatrix.cs" />
+    <Compile Include="UpperTriangularMatrixDeterminant.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
